--- a/dev/static/stylus/_libs.styl
+++ b/dev/static/stylus/_libs.styl
@@ -1,3 +1,6 @@
+// настройка плагинов тут прописывается
+// если нужно добавить css от библиотеки,
+// нужно сюда прописать
 @import '../libs/normalize/normalize.css'
 @import '../libs/magnific/magnific-popup.css'
 @import '../libs/bxslider/jquery.bxslider.css'
