--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -5,21 +5,25 @@
 @import '_vars.styl'
 
 // Подключаем спрайты (просто раскоментируем импорт при появлении PNG спрайтов)
-// @import '_sprite.styl'
+@import '_sprite.styl'
 
 // Подключаем миксины
 @import '_mixins.styl'
 
 html 
-  line-height 1
+  line-height 1.4
   font-size 14px
 
 body
-  font-family mainFont
+  background url('../img/general/empty_track.jpg') top center
+  font-family mainFont, sans-serif
 
+// убираем отступы
 h1,h2,h3,h4,h5,h6
   margin 0
 
+// убираем отступы
+// и точки
 ul,li
   margin 0
   padding 0
@@ -27,11 +31,14 @@ ul,li
   
 p
   margin 0
-  
+
+// у ссылок убираем подчеркивание
+// устанавливаем цвет
 a
   text-decoration none
   color black
 
+// все медиа выравниваем
 audio,
 canvas,
 iframe,
@@ -39,7 +46,9 @@ img,
 svg,
 video
   vertical-align middle
-  
+
+// убираем resize, чтобы пользователь
+// мог resize делать самостоятельно
 textarea
   resize none
 
@@ -52,6 +61,7 @@ select,
 button
   outline none
 
+// для того чтобы отступы и padding'и были уже включены
 *, *:before, *:after
   box-sizing border-box
   
@@ -60,7 +70,8 @@ button
   
 .show
   display block
-  
+
+// цвета выделения
 ::-moz-selection 
   background: #b3d4fc;
   text-shadow: none;
@@ -68,7 +79,8 @@ button
 ::selection 
   background: #b3d4fc;
   text-shadow: none;
-  
+
+// для очистки float'ов
 .clearfix:before,
 .clearfix:after 
   content: " ";
@@ -82,25 +94,81 @@ button
 
 .wrapper
   width 100%
-  max-width 1000px
+  max-width 1300px
   margin 0 auto
+  padding 30px 50px 50px
+  background-color #FFFFFF
+  
+.top-block
+  width 100%
+  max-width 1300px
+  margin 0 auto
+  height 100px
+  padding 15px 50px
 
+.top_social-link
+  li
+    display inline-block
+    vertical-align top
+    width 50px
+    height 50px
+    a
+      display block
+      width 100%
+      height 100%
+      &.top_social-link_vk
+        background url('../img/icons/vk.png') 0 0 no-repeat
+      &.top_social-link_mail
+        background url('../img/icons/mail.png') 0 0 no-repeat
+      &.top_social-link_fb
+        background url('../img/icons/fb.png') 0 0 no-repeat
+      &.top_social-link_tm
+        background url('../img/icons/telegram.png') 0 0 no-repeat
+      &.top_social-link_inst
+        background url('../img/icons/instagram.png') 0 0 no-repeat
+      &.top_social-link_yadisk
+        background url('../img/icons/yandex_disk.png') 0 0 no-repeat
+      &.top_social-link_youtube
+        background url('../img/icons/youtube.png') 0 0 no-repeat
 
+.top_social-link
+  float left
+.top_btn
+  float right
+  .btn
+    &:first-child
+      margin-right 20px
+
+.btn
+  display inline-block
+  padding 0 20px
+  line-height 40px
+  font-size 1.429rem
+  font-weight bold
+  color black
+  text-transform lowercase
+  border-radius 30px
+  
+.btn_white
+  background-color #FFFFFF  
+  
+.btn_orange
+  background-color orangeColor
+  
+.btn_cyan
+  background-color cyanColor
 
 // Общие стили
 @import '_common_styles.styl'
 
 // Стили шапки
-@import 'modules/_header.styl'
-
-// Стили меню
-@import 'modules/_menu.styl'
+@import 'common/_header.styl'
 
 // Стили главной страницы
 @import 'page/_index.styl'
 
 // Стили футера
-@import 'modules/_footer.styl'
+@import 'common/_footer.styl'
 
 // Стили медиазапросов
 @import '_media.styl'
